# template_based_grasp_planning

./: .gitignore  README.md
grasp_template/: CMakeLists.txt  package.xml
grasp_template/include/grasp_template/: template_heightmap.h
grasp_template/src/: dismatch_measure.cpp  template_heightmap.cpp
grasp_template_planning/: CMakeLists.txt  package.xml
grasp_template_planning/include/grasp_template_planning/: image_listener.h
grasp_template_planning/src/: demonstration_parser.cpp  generate_grasp_library.cpp  grasp_demo_library.cpp  object_detection_listener.cpp  pca_planning_pipe.cpp  planning_pipeline.cpp  template_matching.cpp  user_demonstration_recorder.cpp  visualization.cpp
grasp_template_planning/srv/: TabletopObject.srv
pr2_template_based_grasping/: CMakeLists.txt  package.xml
pr2_template_based_grasping/include/pr2_template_based_grasping/: grasp_planning_server.h
pr2_template_based_grasping/launch/: template_grasp_planning_server.launch
pr2_template_based_grasping/src/: grasp_planning_server.cpp
tabletop_segmenter/: CMakeLists.txt  catkin.cmake  package.xml
tabletop_segmenter/src/: tabletop_segmentation.cpp
template_based_grasp_planning/: CMakeLists.txt  package.xml
