<?xml version="1.0"?>
<package>
  <name>grasp_template_planning</name>
  <version>0.0.0</version>
  <description>The grasp_template_planning package</description>

  <maintainer email="leus@todo.todo">leus</maintainer>

  <license>BSD</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>grasp_template</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>polled_camera</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tabletop_segmenter</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>grasp_template</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>polled_camera</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tabletop_segmenter</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
