<?xml version="1.0"?>
<package>
  <name>pr2_template_based_grasping</name>
  <version>0.0.0</version>
  <description>Implementation of grasp_template_planning on the PR2</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="furushchev@todo.todo">furushchev</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pr2_template_based_grasping</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="example@foobar.com">Alexander Herzog (USC)</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>grasp_template</build_depend>
  <build_depend>grasp_template_planning</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>object_manipulation_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pr2_arm_navigation_tutorials</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tabletop_collision_map_processing</build_depend>
  <build_depend>tabletop_segmenter</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>grasp_template</run_depend>
  <run_depend>grasp_template_planning</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>object_manipulation_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pr2_arm_navigation_tutorials</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tabletop_collision_map_processing</run_depend>
  <run_depend>tabletop_segmenter</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
